Update keyboard focus when exiting from a keyboard-grabbing effect

BUG: 479628


(cherry picked from commit 18ba622c407564ecd84235fe8161cc37b691340e)